[gd_scene load_steps=2 format=3 uid="uid://bnwkvpkk47j1j"]

[ext_resource type="Script" uid="uid://b5lx76ar0d7ck" path="res://Scripts/connection_menu.gd" id="1_ygerm"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ygerm")

[node name="RoomCodeLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 14.0
offset_top = 16.0
offset_right = 253.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 36
text = "ROOM CODE: "

[node name="MainMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 788.0
offset_top = 440.0
offset_right = -788.0
offset_bottom = -440.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Host" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Address" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HAPL-MCKF"
placeholder_text = "Unique Code"

[node name="InternetTimeout" type="Timer" parent="."]
